--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(check_consistent)
 export(check_integer)
 export(check_numeric)
+export(doc_formals)
 export(escalateWarnings)
 export(fix_unqualified_fns)
 export(get_fn_name)
