--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(check_date)
 export(check_integer)
 export(check_numeric)
 export(col_syms)
+export(ensyms2)
 export(escalate)
 export(get_fn_args)
 export(get_fn_name)
